Correct h2 spacing in skills list class

--- a/main.css
+++ b/main.css
@@ -27,8 +27,6 @@ p {
 }
 
 .header {
-/*	float: none; 
-	display: inline; */
 	padding-top: 15px; 
 	text-align: center; 
 	
@@ -90,6 +88,7 @@ p {
 
 .skillslist h2 {
 	text-align: center;
+	margin-bottom: 8px;
 }
 
 .section .container h4 {
